fdo#59292 OOXML TDIST is ODF LEGACY.TDIST

Commit 3deb83d7a74a0fe026791e7a336ac6ffad9c0026 correctly renamed ODF
TDIST to LEGACY.TDIST but did not adapt the OOXML filter mapping.

Change-Id: I107859722ac0e9f7ff9725f1d55080340973d86e